--- a/index.html
+++ b/index.html
@@ -4,39 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - CV</title>
+    <title>Peter Strudwick - CV</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Jane Doe</h1>
+        <h1>Peter Strudwick</h1>
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
+                <li><a href="#about">About </a></li>
                 <li><a href="#education">Education</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#skills">Skills</a></li>
+                <li><a href="#experience">Experience </a></li>
+                <li><a href="#skills"> Skills </a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="https://www.linkedin.com/in/your-profile">LinkedIn</a></li>
             </ul>
         </nav>
     </header>
-
+    <img src="C:\Users\strudwic\Documents\GitHub\CVTemplate\Peter strudwick v2.JPG"alt="Sportsday" style="width:300px;height: 300px">
     <section id="about">
         <h2>About Me</h2>
-        <p>I am a dedicated and driven sales intern at HPE with a passion for business and marketing. My journey in the professional world started with roles at Starbucks and volunteering at a charity shop. I am proud to have been the Head Girl during my school years, which helped me develop leadership and communication skills.</p>
+        <p>I am a dedicated and driven sales intern at HPE with a passion for business. My journey in the professional world started with a role as a front of house supervisor at my local Lounges resturant. I am a very personable and coversationable yet very determined and goal oriented </p>
     </section>
 
     <section id="education">
         <h2>Education</h2>
-        <p><strong>University of Glasgow</strong><br> Bachelor's Degree in Business and Marketing<br> Graduation Year: 20XX</p>
+        <p><strong>University of Loughborough</strong><br> Bachelor's Degree in Accounting & Financial Managment<br> Graduation Year: 2025</p>
     </section>
 
     <section id="experience">
         <h2>Experience</h2>
         <div class="experience-entry">
             <h3>Sales Intern - HPE (Hewlett Packard Enterprise)</h3>
-            <p><strong>Location:</strong> Glasgow, Scotland<br><strong>Date:</strong> May 20XX - Present</p>
+            <p><strong>Location:</strong> Manchester, England<br><strong>Date:</strong> July 2023 - Present</p>
             <ul>
                 <li>Assist the sales team with market research and data analysis.</li>
                 <li>Collaborate with clients to understand their needs and provide tailored solutions.</li>
@@ -44,20 +44,20 @@
             </ul>
         </div>
         <div class="experience-entry">
-            <h3>Barista - Starbucks</h3>
+            <h3>Front of House Supervisor - Lounges</h3>
             <p><strong>Location:</strong> Glasgow, Scotland<br><strong>Date:</strong> June 20XX - December 20XX</p>
             <ul>
                 <li>Provided excellent customer service and ensured a welcoming atmosphere.</li>
-                <li>Prepared and served a variety of coffee and beverages.</li>
-                <li>Handled cash transactions and maintained cleanliness and organization.</li>
+                <li>Organised and ran a competant team of waiters to ensure an efficint and smooth service.</li>
+                <li>Handled the finances of the branch and made sure all transcations are correct.</li>
             </ul>
         </div>
         <div class="experience-entry">
-            <h3>Volunteer - Local Charity Shop</h3>
-            <p><strong>Location:</strong> Glasgow, Scotland<br><strong>Date:</strong> June 20XX - August 20XX</p>
+            <h3>Volunteer - National Trust </h3>
+            <p><strong>Location: Buckingham Palace </strong> Derbyshire, Midlands<br><strong>Date:</strong> June 2022 - August 2022</p>
             <ul>
                 <li>Assisted in sorting and organizing donated items.</li>
-                <li>Helped with customer inquiries and processed sales transactions.</li>
+                <li>Helped show customers around the premises .</li>
                 <li>Contributed to fundraising events and community outreach efforts.</li>
             </ul>
         </div>
@@ -84,29 +84,24 @@
     <section id="activities">
         <h2>Activities</h2>
         <div class="activity-entry">
-            <h3>Head Girl - XYZ School</h3>
-            <p><strong>Date:</strong> 20XX - 20XX</p>
-            <p>As Head Girl, I led the student council and represented the student body. I organized school events, fostered positive communication between students and faculty, and played a key role in promoting a respectful and inclusive school environment.</p>
+            <h3>Head Boy- John Port School</h3>
+            <p><strong>Date:</strong> 2014 - 2019</p>
+            <p>As Head Boy, I led the student council and represented the student body. I organized school events, fostered positive communication between students and faculty, and played a key role in promoting a respectful and inclusive school environment.</p>
         </div>
         <div class="activity-entry">
-            <h3>Member - University of Glasgow Hockey Society</h3>
-            <p><strong>Date:</strong> 20XX - Present</p>
-            <p>I am an active member of the University of Glasgow's Hockey Society. This experience has allowed me to stay physically active, work as part of a team, and build strong friendships within the society.</p>
-        </div>
-        <div class="activity-entry">
-            <h3>Welfare Officer - University of Glasgow Hockey Society</h3>
-            <p><strong>Date:</strong> 20XX - 20XX</p>
-            <p>As the Welfare Officer, I was responsible for ensuring the well-being of society members. I organized events focused on mental health, promoted inclusivity, and provided support to fellow students.</p>
+            <h3>Member - University of Loughborough Cricket Society</h3>
+            <p><strong>Date:</strong> 2021 - Present</p>
+            <p>I am an active member of the University of Loughborough's Cricket Society. This experience has allowed me to stay physically active, work as part of a team, and build strong friendships within the society.</p>
         </div>
     </section>
 
     <section id="contact">
-        <h2>Contact</h2>
+        <h2>07555 201374 Email: Strudwick@hpe.com</h2>
         <!-- Add your contact information and a contact form here -->
     </section>
 
     <footer>
-        <p>&copy; 20XX Jane Doe</p>
+        <p>&copy; 2024 Peter Strudwickc:\Users\strudwic\Pictures\handbook photos\Peter strudwick v2.JPG</p>
     </footer>
 
     <script src="script.js"></script>
