--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-    <img src="C:\Users\strudwic\Documents\GitHub\CVTemplate\Peter strudwick v2.JPG"alt="Sportsday" style="width:300px;height: 300px">
+    <img src="Peter strudwick v2.JPG"alt="Sportsday" style="width:300px;height: 300px">
     <section id="about">
         <h2>About Me</h2>
         <p>I am a dedicated and driven sales intern at HPE with a passion for business. My journey in the professional world started with a role as a front of house supervisor at my local Lounges resturant. I am a very personable and coversationable yet very determined and goal oriented </p>
